// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > should render the error state on fetch failure 1`] = `
<DocumentFragment>
  <div
    class="flexbox"
  >
    <div
      class="bp6-button-group"
    >
      <button
        class="bp6-button bp6-active bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Public Cloud
        </span>
      </button>
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Fairfax
        </span>
      </button>
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Mooncake
        </span>
      </button>
      <span
        class="button-group-separator"
      />
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          websites
        </span>
      </button>
    </div>
    <div
      class="bp6-tabs"
    >
      <div
        class="bp6-tab-list bp6-large"
        role="tablist"
      >
        <div
          class="bp6-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px; transition: none;"
        >
          <div
            class="bp6-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_extensions"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp6-tab"
          data-tab-id="extensions"
          id="bp6-tab-title_undefined_extensions"
          role="tab"
          tabindex="0"
        >
          Extensions
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_build"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp6-tab"
          data-tab-id="build"
          id="bp6-tab-title_undefined_build"
          role="tab"
          tabindex="-1"
        >
          Build Information
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_server"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp6-tab"
          data-tab-id="server"
          id="bp6-tab-title_undefined_server"
          role="tab"
          tabindex="-1"
        >
          Server Information
        </div>
      </div>
    </div>
    <div
      class="bp6-non-ideal-state bp6-non-ideal-state-vertical"
    >
      <div
        class="bp6-non-ideal-state-visual"
        style="font-size: 48px; line-height: 48px;"
      >
        <span
          aria-hidden="true"
          class="bp6-icon bp6-icon-error bp6-icon-muted"
          data-icon="error"
          tabindex="-1"
        />
      </div>
      <div
        class="bp6-non-ideal-state-text"
      >
        <h4
          class="bp6-heading"
        >
          Error
        </h4>
        <div>
          Failed to fetch diagnostics
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > should render the initial loaded state 1`] = `
<DocumentFragment>
  <div
    class="flexbox"
  >
    <div
      class="bp6-button-group"
    >
      <button
        class="bp6-button bp6-active bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Public Cloud
        </span>
      </button>
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Fairfax
        </span>
      </button>
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Mooncake
        </span>
      </button>
      <span
        class="button-group-separator"
      />
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          paasserverless
        </span>
      </button>
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          websites
        </span>
      </button>
    </div>
    <div
      class="bp6-tabs"
    >
      <div
        class="bp6-tab-list bp6-large"
        role="tablist"
      >
        <div
          class="bp6-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px; transition: none;"
        >
          <div
            class="bp6-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_extensions"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp6-tab"
          data-tab-id="extensions"
          id="bp6-tab-title_undefined_extensions"
          role="tab"
          tabindex="0"
        >
          Extensions
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_build"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp6-tab"
          data-tab-id="build"
          id="bp6-tab-title_undefined_build"
          role="tab"
          tabindex="-1"
        >
          Build Information
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_server"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp6-tab"
          data-tab-id="server"
          id="bp6-tab-title_undefined_server"
          role="tab"
          tabindex="-1"
        >
          Server Information
        </div>
      </div>
    </div>
    <div
      class="tab-panel"
      id="extensions-tab"
    >
      <div
        class="stack"
      >
        <div
          class="extension-root"
        >
          <div
            class="bp6-tabs bp6-vertical"
          >
            <div
              class="bp6-tab-list"
              role="tablist"
            >
              <div
                class="bp6-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px; transition: none;"
              >
                <div
                  class="bp6-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp6-tab-panel_undefined_paasserverless"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp6-tab"
                data-tab-id="paasserverless"
                id="bp6-tab-title_undefined_paasserverless"
                role="tab"
                tabindex="0"
              >
                paasserverless
              </div>
              <div
                aria-controls="bp6-tab-panel_undefined_websites"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp6-tab"
                data-tab-id="websites"
                id="bp6-tab-title_undefined_websites"
                role="tab"
                tabindex="-1"
              >
                websites
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > should render the loading state while loading 1`] = `
<DocumentFragment>
  <div
    class="flexbox"
  >
    <div
      class="bp6-button-group"
    >
      <button
        class="bp6-button bp6-active bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Public Cloud
        </span>
      </button>
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Fairfax
        </span>
      </button>
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Mooncake
        </span>
      </button>
      <span
        class="button-group-separator"
      />
      <button
        class="bp6-button bp6-minimal"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          websites
        </span>
      </button>
    </div>
    <div
      class="bp6-tabs"
    >
      <div
        class="bp6-tab-list bp6-large"
        role="tablist"
      >
        <div
          class="bp6-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px; transition: none;"
        >
          <div
            class="bp6-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_extensions"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp6-tab"
          data-tab-id="extensions"
          id="bp6-tab-title_undefined_extensions"
          role="tab"
          tabindex="0"
        >
          Extensions
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_build"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp6-tab"
          data-tab-id="build"
          id="bp6-tab-title_undefined_build"
          role="tab"
          tabindex="-1"
        >
          Build Information
        </div>
        <div
          aria-controls="bp6-tab-panel_undefined_server"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp6-tab"
          data-tab-id="server"
          id="bp6-tab-title_undefined_server"
          role="tab"
          tabindex="-1"
        >
          Server Information
        </div>
      </div>
    </div>
    <div
      class="tab-panel vertical-center"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        class="bp6-spinner"
        role="progressbar"
      >
        <div
          class="bp6-spinner-animation"
        >
          <svg
            height="50"
            stroke-width="8.00"
            viewBox="1.00 1.00 98.00 98.00"
            width="50"
          >
            <path
              class="bp6-spinner-track"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            />
            <path
              class="bp6-spinner-head"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              pathLength="280"
              stroke-dasharray="280 280"
              stroke-dashoffset="210"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
